--- a/package.json
+++ b/package.json
@@ -4,26 +4,33 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "register-service-worker": "^1.7.2",
+    "sass": "^1.79.5",
+    "swiper": "^11.1.14",
+    "toast": "^0.5.4",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.4",
     "vue-router": "^4.0.3",
+    "vue3-cookies": "^1.0.6",
+    "vue3-toastify": "^0.2.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@types/bootstrap": "^5.2.10",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "sass-loader": "^16.0.1"
   }
 }
